--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,3 +16,7 @@ set-option -g history-limit 300000
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
+#neovim fix
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
