--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ if-shell '[ $(echo $(uname)) == Linux ]' \
 if-shell '[ $(echo $(uname)) == Darwin ]' \
 	'set -g default-shell /usr/local/bin/bash'
 
-#default path
+# default path
 bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
 bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
 bind c new-window -c '#{pane_current_path}' # Create new window
@@ -17,6 +17,9 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
-#neovim fix
+# neovim fix
 set-option -sg escape-time 10
 set-option -g default-terminal "screen-256color"
+
+# mouse mode
+set -g mouse on
